# LiteOSv5.0_CMake

./: .config  .config.old  .gitignore  CMakeLists.txt  Makefile  README.md  config.cmake  config.mk
arch/: CMakeLists.txt  cpu.cmake
arch/arm/: CMakeLists.txt  cpu.cmake
arch/arm/cortex_a_r/: CMakeLists.txt
arch/arm/cortex_m/: CMakeLists.txt  cpu.cmake
compat/: CMakeLists.txt  api.cmake
compat/cmsis/: CMakeLists.txt
components/: CMakeLists.txt  components.cmake
components/ai/: CMakeLists.txt  ai.cmake
components/connectivity/: CMakeLists.txt  connectivity.cmake
components/connectivity/agent_tiny/: CMakeLists.txt  agent_tiny.cmake
components/connectivity/agent_tiny/atiny_lwm2m/: CMakeLists.txt
components/connectivity/agent_tiny/atiny_mqtt/: CMakeLists.txt
components/connectivity/lwm2m/: CMakeLists.txt  lwm2m.cmake
components/connectivity/mqtt/: mqtt.cmake
components/connectivity/nb_iot/: CMakeLists.txt  Kconfig
components/fs/: CMakeLists.txt  fs.cmake
components/gui/: CMakeLists.txt  gui.cmake
components/lib/: CMakeLists.txt  Kconfig  lib.cmake
components/lib/cjson/: CMakeLists.txt  cjson.cmake
components/log/: CMakeLists.txt  atiny_log.cmake
components/net/: CMakeLists.txt  net.cmake  net.mk
components/net/at_device/: CMakeLists.txt  at.cmake
components/net/at_frame/: CMakeLists.txt
components/net/lwip/: CMakeLists.txt  Makefile  lwip.cmake  lwip.mk
components/net/sal/: CMakeLists.txt
components/security/: CMakeLists.txt  Kconfig  Makefile  security.cmake  security.mk
components/security/mbedtls/: CMakeLists.txt
components/sensorhub/: CMakeLists.txt  sensorhub.cmake
demos/dtls_server/: Kconfig
demos/fs/: Kconfig  ramfs_demo.c
demos/ipv6_client/: Kconfig
demos/nbiot_without_atiny/: nb_demo.h
doc/resource/: main.c
kernel/: CMakeLists.txt
kernel/base/: CMakeLists.txt
kernel/extended/: CMakeLists.txt
kernel/extended/cppsupport/: CMakeLists.txt
kernel/extended/cpup/: CMakeLists.txt
kernel/extended/lowpower/: CMakeLists.txt
kernel/extended/lowpower/powermgr/: CMakeLists.txt
kernel/extended/lowpower/runstop/: CMakeLists.txt
kernel/extended/lowpower/tickless/: CMakeLists.txt
kernel/init/: CMakeLists.txt
lib/: CMakeLists.txt  api.cmake
lib/huawei_libc/: CMakeLists.txt
lib/libc/: CMakeLists.txt
lib/libc/src/math/: CMakeLists.txt
lib/libsec/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
osdepends/: CMakeLists.txt
shell/: CMakeLists.txt  Makefile  README_CN.md  api.cmake
targets/: CMakeLists.txt  targets.cmake
targets/Cloud_STM32F429IGTx_FIRE/Src/: fatfs_sd_hal.c  fatfs_spi_hal.c  sd_diskio.c
targets/Cloud_STM32F429IGTx_FIRE/include/: menuconfig.h
targets/STM32F407_ATK_Explorer/: CMakeLists.txt
targets/STM32F407_ATK_Explorer/include/: menuconfig.h
targets/STM32F769IDISCOVERY/Inc/: platform_init.h
targets/STM32F769IDISCOVERY/Src/: platform_init.c
targets/bsp/: CMakeLists.txt
targets/bsp/drivers/st_timer/: timer.c  timer.h
tools/mk/: compiler_gcc.mk  los_config.mk  module.mk  module_lib.mk
